# cliper

./: .gitignore  Cargo.toml  README.md  cliper-install.sh  cliper-release-install.sh
src/: main.rs
src/app/: manifest_parser.rs
src/cliper/: apk_cliper.rs  cliper_info.rs  cmds.rs  mod.rs  size_data.rs
